@@ -26,6 +26,13 @@ DEFENCODING(( "CP437",                  /* IANA, JDK 1.1 */
             cp437,
             { cp437_mbtowc },             { cp437_wctomb, NULL })
 
+DEFENCODING(( "CP775",                  /* IANA, JDK 1.1 */
+              "IBM775",                 /* IANA */
+              "csPC775Baltic",          /* IANA */
+            ),
+            cp775,
+            { cp775_mbtowc },             { cp775_wctomb, NULL })
+
 DEFENCODING(( "CP852",                  /* IANA, JDK 1.1 */
               "IBM852",                 /* IANA */
               "852",                    /* IANA */
